--- a/src/main/resources/templates/order/list.html
+++ b/src/main/resources/templates/order/list.html
@@ -30,7 +30,7 @@
                      th:each="order : ${orders}">
                     <div class="row margin-bottom-20">
                         <div class="col-md-8 col-md-offset-0">
-                            <textarea disabled rows="8" class="form-control" th:text="${order.message}"></textarea>
+                            <textarea disabled="true" rows="8" class="form-control" th:text="${order.message}"></textarea>
                         </div>
                     </div>
                     <div class="row">
