--- a/src/main/resources/templates/order/approved.html
+++ b/src/main/resources/templates/order/approved.html
@@ -28,13 +28,13 @@
 
                 <div class="row">
                     <div>
-                        <b>ФИО:</b> <span th:text="*{client.getFullname()}"></span>
+                        <b>ФИО:</b> <span th:text="${client.user.getFullName()}"></span>
                     </div>
                     <div>
-                        <b>Номер мобильного:</b> <span th:text="*{client.phoneNumber}"></span>
+                        <b>Номер мобильного:</b> <span th:text="${client.user.phoneNumber}"></span>
                     </div>
                     <div>
-                        <b>Адрес:</b> <span th:text="*{client.address}"></span>
+                        <b>Адрес:</b> <span th:text="${client.user.address}"></span>
                     </div>
                 </div>
             </div>
@@ -42,6 +42,7 @@
 
     <div th:replace="fragments/footer :: footer"></div>
 </div>
+    </div></div>
 <script th:src="@{/js/jquery.min.js}"/>
 <script th:src="@{/js/bootstrap.min.js}"/>
 <script th:src="@{/js/scripts.js}"/>
@@ -51,6 +52,5 @@
 <script th:src="@{/js/jquery.sticky.js}"/>
 <script th:src="@{/js/slimbox2.js}"/>
 <script th:src="@{/js/modernizr.custom.js}"/>
-
 </body>
 </html>
