--- a/src/main/resources/templates/administration/tutor/new.html
+++ b/src/main/resources/templates/administration/tutor/new.html
@@ -22,7 +22,7 @@
 
     <div th:replace="fragments/header :: header"></div>
 
-    <div th:replace="fragments/menu :: menu('tutors')"></div>
+    <div th:replace="fragments/menu :: menu('register_tutor')"></div>
 
     <div id="content">
         <div class="container background-white">
