Added authentification in thymeleafe

--- a/src/main/resources/templates/administration/tutor/new.html
+++ b/src/main/resources/templates/administration/tutor/new.html
@@ -133,7 +133,7 @@
                                 <label>О себе
                                     <p>Здесь Вы можете указать любую информацию о себе, которую вы еще не указали при заполнении профиля</p>
                                 </label>
-                                <textarea rows="4" class="form-control" data-bind="value: comment"
+                                <textarea class="form-control margin-bottom-20" rows="4" data-bind="value: comment"
                                           th:field="*{comment}"></textarea>
                             </div>
                             <div class="row">
