--- a/src/main/resources/templates/tutor.html
+++ b/src/main/resources/templates/tutor.html
@@ -80,10 +80,18 @@
                                 <span th:if="*{experienceInYear &gt; 1 and experienceInYear &lt; 5}">года</span>
                                 <span th:if="*{experienceInYear &gt; 4}">лет</span>
                             </div>
-                            <div th:if="*{comment != null}">
+                            <div th:if="!*{#strings.isEmpty(comment)}">
                                 <b>О себе:</b> <span th:text="*{comment}"></span>
                             </div>
 
+                            <div>
+                                <b>Цена за занятие:</b>
+                                <span type="span" class="label label-primary" th:text="${price}"></span>
+                            </div>
+                            <div>
+                                <b>Типы занятий:</b>
+                                <span type="span" class="label label-primary" th:each="l : *{lessonTypes}" th:text="${l.name}"></span>
+                            </div>
                         </div>
                     </div>
                     <div class="row">
@@ -92,32 +100,34 @@
                         </div>
                     </div>
 
-                    <div class="row">
-                        <h3 class="padding-top-10 pull-left">
-                            Текущая процентная ставка: <p th:text="${invoice.rate}"></p>
-                            К оплате : <p th:text="${invoice.amount}"></p> BYN
-                        </h3>
-                        <div class="col-lg-12 text-right">
-                            <a th:href="@{*{id} + '/order'}" class="btn btn-default">Текущая ставка</a>
-                        </div>
-                    </div>
+                    <!--<div class="row">-->
+                        <!--<h3 class="padding-top-10 pull-left">-->
+                            <!--Текущая процентная ставка: <p th:text="${invoice.rate}"></p>-->
+                            <!--К оплате : <p th:text="${invoice.amount}"></p> BYN-->
+                        <!--</h3>-->
+                        <!--<div class="col-lg-12 text-right">-->
+                            <!--<a th:href="@{*{id} + '/order'}" class="btn btn-default">Текущая ставка</a>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <div th:if="!*{#strings.isEmpty(status)}">
                     <hr/>
                     <div class="row animate fadeInUp">
                         <h2 class="text-center margin-top-10" th:text="*{status}"></h2>
                     </div>
 
-                    <div class="col-md-12">
-                        <hr/>
-                        <div class="col-md-1 margin-vert-20">
-                            <a th:href="@{'/tutors/' + *{id} + '/history'}">
-                                <i class="fa-plus-square fa-2x color-primary"></i>
-                            </a>
-                        </div>
-                        <div class="col-md-10 margin-vert-10">
-                            <h4><a th:href="@{'/tutors/' + *{id} + '/history'}">Добавить новое занятие</a></h4>
-                        </div>
-                    </div>
+                    <!--<div class="col-md-12">-->
+                        <!--<hr/>-->
+                        <!--<div class="col-md-1 margin-vert-20">-->
+                            <!--<a th:href="@{'/tutors/' + *{id} + '/history'}">-->
+                                <!--<i class="fa-plus-square fa-2x color-primary"></i>-->
+                            <!--</a>-->
+                        <!--</div>-->
+                        <!--<div class="col-md-10 margin-vert-10">-->
+                            <!--<h4><a th:href="@{'/tutors/' + *{id} + '/history'}">Добавить новое занятие</a></h4>-->
+                        <!--</div>-->
+                    <!--</div>-->
                     <hr/>
+                    </div>
                     <div class="row">
                         <div class="col-md-6 animate fadeIn" th:if="!${evaluation.id == null or evaluation.id == null}">
                             <!-- My Skills -->
